<resources>
    <string name="app_name">福利栈</string>
    <string name="app_name_ex">福利栈 ( •̀ ω •́ )</string>
    <string name="no_string" />
    <string name="ok">确定</string>
    <string name="remote_refresh">刷新</string>
    <string name="remote_select">请选择局域网主机：</string>
    <string name="ai_send">发送</string>
    <string name="trans_language">截屏翻译语言：</string>
    <string name="trans_en">英语</string>
    <string name="trans_jp">日语</string>
    <string name="trans_quality">截屏翻译图片质量：</string>
    <string name="trans_offset">截屏翻译垂直偏移：</string>
    <string name="web_select">日语百词斩候选答案数：</string>
    <string name="remote_get">获取Windows端远控程序</string>
    <string name="menu_home">首页</string>
    <string name="menu_web">日语百词斩</string>
    <string name="menu_remote">局域网远控</string>
    <string name="menu_ai">AI</string>
    <string name="menu_setting">设置</string>
    <string name="menu_more">更多</string>
    <string name="menu_translate_on">开启截屏翻译</string>
    <string name="menu_translate_off">关闭截屏翻译</string>
    <string name="menu_about">关于</string>
    <string name="menu_github">Github</string>
    <string name="menu_exit">退出</string>
    <string name="menu_refresh">刷新页面</string>
    <string name="menu_clear">清空消息</string>
    <string name="keyboard">键盘</string>
    <string name="keyboard_Esc">Esc</string>
    <string name="keyboard_F1">F1</string>
    <string name="keyboard_F2">F2</string>
    <string name="keyboard_F3">F3</string>
    <string name="keyboard_F4">F4</string>
    <string name="keyboard_F5">F5</string>
    <string name="keyboard_F6">F6</string>
    <string name="keyboard_F7">F7</string>
    <string name="keyboard_F8">F8</string>
    <string name="keyboard_F9">F9</string>
    <string name="keyboard_F10">F10</string>
    <string name="keyboard_F11">F11</string>
    <string name="keyboard_F12">F12</string>
    <string name="keyboard_close">收起键盘</string>
    <string name="keyboard_key1">`</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_key2">-</string>
    <string name="keyboard_key3">=</string>
    <string name="keyboard_Backspace">Backspace</string>
    <string name="keyboard_Tab">Tab</string>
    <string name="keyboard_Q">Q</string>
    <string name="keyboard_W">W</string>
    <string name="keyboard_E">E</string>
    <string name="keyboard_R">R</string>
    <string name="keyboard_T">T</string>
    <string name="keyboard_Y">Y</string>
    <string name="keyboard_U">U</string>
    <string name="keyboard_I">I</string>
    <string name="keyboard_O">O</string>
    <string name="keyboard_P">P</string>
    <string name="keyboard_key4">[</string>
    <string name="keyboard_key5">]</string>
    <string name="keyboard_key6">\\</string>
    <string name="keyboard_Caps">Caps</string>
    <string name="keyboard_A">A</string>
    <string name="keyboard_S">S</string>
    <string name="keyboard_D">D</string>
    <string name="keyboard_F">F</string>
    <string name="keyboard_G">G</string>
    <string name="keyboard_H">H</string>
    <string name="keyboard_J">J</string>
    <string name="keyboard_K">K</string>
    <string name="keyboard_L">L</string>
    <string name="keyboard_key7">;</string>
    <string name="keyboard_key8">\'</string>
    <string name="keyboard_Enter">Enter</string>
    <string name="keyboard_Shift">Shift</string>
    <string name="keyboard_Z">Z</string>
    <string name="keyboard_X">X</string>
    <string name="keyboard_C">C</string>
    <string name="keyboard_V">V</string>
    <string name="keyboard_B">B</string>
    <string name="keyboard_N">N</string>
    <string name="keyboard_M">M</string>
    <string name="keyboard_key9">,</string>
    <string name="keyboard_key10">.</string>
    <string name="keyboard_key11">/</string>
    <string name="keyboard_up">↑</string>
    <string name="keyboard_Delete">Delete</string>
    <string name="keyboard_Ctrl">Ctrl</string>
    <string name="keyboard_Win">Win</string>
    <string name="keyboard_Alt">Alt</string>
    <string name="keyboard_Space">Space</string>
    <string name="keyboard_left">←</string>
    <string name="keyboard_down">↓</string>
    <string name="keyboard_right">→</string>
</resources>