<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Remote.RemoteScreenActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/keyboard_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="2dp"
            android:background="@drawable/keyboard"
            android:onClick="onClick"
            android:text="@string/keyboard"
            android:textColor="@color/blue" />

        <LinearLayout
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_Esc"
                    style="@style/Keyboard"
                    android:layout_weight="1.2"
                    android:text="@string/keyboard_Esc" />

                <Button
                    android:id="@+id/keyboard_F1"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F1" />

                <Button
                    android:id="@+id/keyboard_F2"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F2" />

                <Button
                    android:id="@+id/keyboard_F3"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F3" />

                <Button
                    android:id="@+id/keyboard_F4"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F4" />

                <Button
                    android:id="@+id/keyboard_F5"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F5" />

                <Button
                    android:id="@+id/keyboard_F6"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F6" />

                <Button
                    android:id="@+id/keyboard_F7"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F7" />

                <Button
                    android:id="@+id/keyboard_F8"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F8" />

                <Button
                    android:id="@+id/keyboard_F9"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F9" />

                <Button
                    android:id="@+id/keyboard_F10"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F10" />

                <Button
                    android:id="@+id/keyboard_F11"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F11" />

                <Button
                    android:id="@+id/keyboard_F12"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F12" />

                <Button
                    android:id="@+id/keyboard_close"
                    style="@style/Keyboard"
                    android:layout_weight="1.8"
                    android:text="@string/keyboard_close" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_key1"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key1" />

                <Button
                    android:id="@+id/keyboard_1"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_1" />

                <Button
                    android:id="@+id/keyboard_2"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_2" />

                <Button
                    android:id="@+id/keyboard_3"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_3" />

                <Button
                    android:id="@+id/keyboard_4"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_4" />

                <Button
                    android:id="@+id/keyboard_5"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_5" />

                <Button
                    android:id="@+id/keyboard_6"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_6" />

                <Button
                    android:id="@+id/keyboard_7"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_7" />

                <Button
                    android:id="@+id/keyboard_8"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_8" />

                <Button
                    android:id="@+id/keyboard_9"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_9" />

                <Button
                    android:id="@+id/keyboard_0"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_0" />

                <Button
                    android:id="@+id/keyboard_key2"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key2" />

                <Button
                    android:id="@+id/keyboard_key3"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key3" />

                <Button
                    android:id="@+id/keyboard_Backspace"
                    style="@style/Keyboard"
                    android:layout_weight="2"
                    android:text="@string/keyboard_Backspace" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_Tab"
                    style="@style/Keyboard"
                    android:layout_weight="1.2"
                    android:text="@string/keyboard_Tab" />

                <Button
                    android:id="@+id/keyboard_Q"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Q" />

                <Button
                    android:id="@+id/keyboard_W"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_W" />

                <Button
                    android:id="@+id/keyboard_E"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_E" />

                <Button
                    android:id="@+id/keyboard_R"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_R" />

                <Button
                    android:id="@+id/keyboard_T"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_T" />

                <Button
                    android:id="@+id/keyboard_Y"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Y" />

                <Button
                    android:id="@+id/keyboard_U"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_U" />

                <Button
                    android:id="@+id/keyboard_I"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_I" />

                <Button
                    android:id="@+id/keyboard_O"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_O" />

                <Button
                    android:id="@+id/keyboard_P"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_P" />

                <Button
                    android:id="@+id/keyboard_key4"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key4" />

                <Button
                    android:id="@+id/keyboard_key5"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key5" />

                <Button
                    android:id="@+id/keyboard_key6"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_Caps"
                    style="@style/Keyboard"
                    android:layout_weight="1.2"
                    android:text="@string/keyboard_Caps" />

                <Button
                    android:id="@+id/keyboard_A"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_A" />

                <Button
                    android:id="@+id/keyboard_S"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_S" />

                <Button
                    android:id="@+id/keyboard_D"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_D" />

                <Button
                    android:id="@+id/keyboard_F"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_F" />

                <Button
                    android:id="@+id/keyboard_G"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_G" />

                <Button
                    android:id="@+id/keyboard_H"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_H" />

                <Button
                    android:id="@+id/keyboard_J"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_J" />

                <Button
                    android:id="@+id/keyboard_K"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_K" />

                <Button
                    android:id="@+id/keyboard_L"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_L" />

                <Button
                    android:id="@+id/keyboard_key7"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key7" />

                <Button
                    android:id="@+id/keyboard_key8"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key8" />

                <Button
                    android:id="@+id/keyboard_Enter"
                    style="@style/Keyboard"
                    android:layout_weight="1.8"
                    android:text="@string/keyboard_Enter" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_Shift"
                    style="@style/Keyboard"
                    android:layout_weight="2"
                    android:text="@string/keyboard_Shift" />

                <Button
                    android:id="@+id/keyboard_Z"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Z" />

                <Button
                    android:id="@+id/keyboard_X"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_X" />

                <Button
                    android:id="@+id/keyboard_C"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_C" />

                <Button
                    android:id="@+id/keyboard_V"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_V" />

                <Button
                    android:id="@+id/keyboard_B"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_B" />

                <Button
                    android:id="@+id/keyboard_N"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_N" />

                <Button
                    android:id="@+id/keyboard_M"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_M" />

                <Button
                    android:id="@+id/keyboard_key9"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key9" />

                <Button
                    android:id="@+id/keyboard_key10"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key10" />

                <Button
                    android:id="@+id/keyboard_key11"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_key11" />

                <Button
                    android:id="@+id/keyboard_up"
                    style="@style/Keyboard"
                    android:layout_weight="1.125"
                    android:text="@string/keyboard_up" />

                <Button
                    android:id="@+id/keyboard_Delete"
                    style="@style/Keyboard"
                    android:layout_weight="1.125"
                    android:text="@string/keyboard_Delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/keyboard_Ctrl"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Ctrl" />

                <Button
                    android:id="@+id/keyboard_Win"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Win" />

                <Button
                    android:id="@+id/keyboard_Alt"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_Alt" />

                <Button
                    android:id="@+id/keyboard_Space"
                    style="@style/Keyboard"
                    android:layout_weight="7"
                    android:text="@string/keyboard_Space" />

                <Button
                    android:id="@+id/keyboard_left"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_left" />

                <Button
                    android:id="@+id/keyboard_down"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_down" />

                <Button
                    android:id="@+id/keyboard_right"
                    style="@style/Keyboard"
                    android:layout_weight="1"
                    android:text="@string/keyboard_right" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>