<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/SettingGroup">

        <TextView
            style="@style/SettingText"
            android:text="@string/trans_language" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/trans_en"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/trans_en"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/trans_jp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:text="@string/trans_jp"
                android:textColor="@color/blue"
                android:textSize="18sp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/SettingGroup">

        <TextView
            style="@style/SettingText"
            android:text="@string/web_select" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" />

    </LinearLayout>

    <LinearLayout style="@style/SettingGroup">

        <TextView
            android:id="@+id/remote_get"
            style="@style/SettingText"
            android:gravity="center"
            android:text="@string/remote_get" />

    </LinearLayout>

</LinearLayout>